<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9EBCF5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_entorno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/info_entorno"
        android:textColor="#000000"
        android:background="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_mapa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/mapa_static"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:padding="16dp"
            android:contentDescription="@string/info_mapa" />

        <TextView
            android:id="@+id/text_ubicacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ubicacion_salas"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="16dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_transporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transportes_disponibles"
        android:background="@color/white"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <TextView
        android:id="@+id/text_transporte_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transportes"
        android:textColor="#000000"
        android:paddingLeft="32dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp" />

    <TextView
        android:id="@+id/text_enlaces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enlaces_relacionados"
        android:background="@color/white"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="16dp" />

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:autoLink="web"
        android:textColor="#000000" />

</LinearLayout>
