<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.salas.SalasFragment">

    <ImageView
        android:id="@+id/imageTutoria"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/light_blue_200"
        android:contentDescription="@string/img_salas_tutorias"
        app:srcCompat="@mipmap/ic_salas_tutorias_foreground" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_200"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSalas_Tutoria1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_tutoria1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewSalas_Tutoria2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_tutoria2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_200"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalas_Congreso1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sala"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capacidad"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/conexion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tutoria"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion_tutoria"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/si"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />


        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageTaller"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/light_blue_600"
        android:contentDescription="@string/img_salas_taller"
        app:srcCompat="@mipmap/ic_salas_talleres_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_600"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSalas_Taller1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_taller1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewSalas_Taller2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_taller2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_600"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalas_Congreso1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sala"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capacidad"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/conexion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/taller"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_30"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion_taller"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/si"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />


        </TableRow>

    </TableLayout>

    <ImageView
        android:id="@+id/imageCongreso"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/light_blue_200"
        android:contentDescription="@string/img_salas_congreso"
        app:srcCompat="@mipmap/ic_salas_congreso_foreground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_200"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSalas_Congreso1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_congreso1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/textViewSalas_Congreso2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/texto_salas_congreso2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue_200"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalas_Congreso1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sala"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/capacidad"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/conexion"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/table_row_border">

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/congreso"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_200"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ubicacion_congreso"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/si"
                android:textColor="#000000"
                android:textSize="16sp"
                android:gravity="center" />
        </TableRow>
    </TableLayout>
</LinearLayout>
